<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        app:showAsAction="never"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/ordersFragment"
        app:showAsAction="never"
        android:icon="@drawable/cart"
        android:title="@string/orders" />

    <item
        android:id="@+id/cartFragment"
        app:showAsAction="never"
        android:icon="@drawable/bag"
        android:title="@string/cart" />



    <item
        android:id="@+id/profileFragment"
        app:showAsAction="never"
        android:icon="@drawable/user_icon"
        android:title="@string/profile" />
</menu>