<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.ab.dev.shoesly.presentation.fragments.login.view.LoginFragment" />
        <variable
            name="viewModel"
            type="com.ab.dev.shoesly.presentation.fragments.login.viewModel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:scrollbars="none"
        tools:context=".presentation.fragments.login.view.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/app_logo"
                android:contentDescription="@string/app_logo" />

            <TextView
                android:id="@+id/tvLoginToYourAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                style="@style/SectionHeader"
                android:text="@string/login_to_your_account" />

            <TextView
                android:id="@+id/tvMainErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/red"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_marginTop="15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email"
                app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge"
                app:startIconDrawable="@drawable/user_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:text="@={viewModel.loginForm.email}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge"
                app:startIconDrawable="@drawable/user_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:text="@={viewModel.loginForm.password}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/remember_me" />
            
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/login"/>

            <ProgressBar
                android:id="@+id/cpiLoading"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_the_password"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="50dp">

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_continue_with"
                    android:layout_marginHorizontal="15dp"/>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="50dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/facebook"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{() -> fragment.loginWithGoogleAccount()}"
                    android:layout_marginHorizontal="15dp"
                    app:icon="@drawable/google"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/apple"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCreateNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textAllCaps="false"
                android:onClick="@{() -> fragment.navigateToSignUpFragment()}"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

        </LinearLayout>
    </ScrollView>
</layout>