<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background"
        tools:context=".presentation.fragments.splash.view.SplashScreenFragment">

        <TextView
            android:id="@+id/tvLogo"
            style="@style/Base.Widget.AppCompat.TextView.OnPrimary.SplashScreenLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/materialDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/materialDivider"
            app:layout_constraintTop_toTopOf="@+id/materialDivider"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imgViewLogo"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/app_logo"
            app:layout_constraintBottom_toBottomOf="@+id/materialDivider"
            app:layout_constraintEnd_toStartOf="@+id/materialDivider"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialDivider" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="2dp"
            android:layout_height="100dp"
            app:dividerColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.338" />

        <TextView
            android:id="@+id/tvFrom"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            app:layout_constraintEnd_toEndOf="@+id/tvLogo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvLogo"
            app:layout_constraintTop_toBottomOf="@+id/tvLogo" />

        <TextView
            android:id="@+id/tvABDevelopment"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ab_dev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvFrom"
            app:layout_constraintTop_toBottomOf="@+id/tvFrom" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>