<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.ab.dev.shoesly.presentation.fragments.signUp.viewModel.SignUpViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.signUp.view.SignUpFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            app:elevation="0dp"
            style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
            android:layout_alignParentEnd="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBarSignUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.Toolbar.Surface" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/appBarLayoutSignUp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/app_logo"
                    android:contentDescription="@string/app_logo" />

                <TextView
                    android:id="@+id/tvLoginToYourAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center_horizontal"
                    style="@style/SectionHeader"
                    android:text="@string/create_new_account_sign_up" />

                <TextView
                    android:id="@+id/tvMainErrorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    textError="@{viewModel.registrationState.firstNameErrorMessage}"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/first_name"
                    app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge"
                    app:startIconDrawable="@drawable/user_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.registrationForm.firstName}"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/last_name"
                    textError="@{viewModel.registrationState.lastNameErrorMessage}"
                    app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge"
                    app:startIconDrawable="@drawable/user_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtLastName"
                        android:layout_width="match_parent"
                        android:text="@={viewModel.registrationForm.lastName}"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/email"
                    textError="@{viewModel.registrationState.emailErrorMessage}"
                    app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge"
                    app:startIconDrawable="@drawable/user_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.registrationForm.email}"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/password"
                    textError="@{viewModel.registrationState.passwordErrorMessage}"
                    app:passwordToggleEnabled="true"
                    app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge"
                    app:startIconDrawable="@drawable/user_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:text="@={viewModel.registrationForm.password}"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnRegistration"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> viewModel.signUp()}"
                    android:text="@string/create"/>

                <ProgressBar
                    android:id="@+id/pbLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</layout>