<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.fragments.home.view.HomeFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.ab.dev.shoesly.presentation.fragments.home.view.HomeFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background"
        android:contentDescription="@string/scroll_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayoutHome"
                style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/background"
                android:clipToPadding="true"
                app:elevation="0dp">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBarHome"
                    style="@style/Widget.MaterialComponents.Toolbar.Surface"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/background"
                    app:menu="@menu/main_app_bar_menu"
                    app:subtitle="Hello"
                    app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:title="Ahmed"
                    app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
                    app:titleTextColor="?attr/colorPrimary" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/tvBrands"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brands"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnSeeAllBrands"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/see_all"
                    android:onClick="@{() -> fragment.navigateToAllBrands()}"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBrands"
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:layout_marginHorizontal="16dp"
                tools:listitem="@layout/main_brand_item"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/tvMostPopular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_popular"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnSeeAllMostPopular"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/see_all"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMostPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                tools:listitem="@layout/shoe_item"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

        </LinearLayout>
    </ScrollView>
</layout>

